--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "ext-dom": "*",
     "ext-json": "*",
     "ext-imap": "*",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "phpmailer/phpmailer": "^6.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*"
