--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "phpmailer/phpmailer": "^6.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "*"
+    "squizlabs/php_codesniffer": "*",
+    "phpunit/phpunit": "^8"
   }
 }
