--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "ext-dom": "*",
     "ext-json": "*",
     "ext-imap": "*",
+    "ext-mbstring": "*",
     "guzzlehttp/guzzle": "~6.0",
-    "phpmailer/phpmailer": "^6.0"
+    "phpmailer/phpmailer": "^6.0",
+    "vlucas/phpdotenv": "^4.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
