--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
   "require": {
     "ext-dom": "*",
     "ext-json": "*",
+    "ext-grpc": "*",
     "ext-imap": "*",
     "ext-mbstring": "*",
     "guzzlehttp/guzzle": "~6.0",
     "phpmailer/phpmailer": "^6.0",
-    "vlucas/phpdotenv": "^4.1"
+    "vlucas/phpdotenv": "^4.1",
+    "google/cloud-firestore": "^1.10"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
