--- a/.env.dev
+++ b/.env.dev
@@ -7,3 +7,7 @@ SCIENER_APP_SECRET=""
 SCIENER_LOCK_ID=""
 SCIENER_USER=""
 SCIENER_PASSWORD=""
+
+SUPPORT_EMAIL=""
+
+GOOGLE_APPLICATION_CREDENTIALS=""
