--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "autoload": {
-    "psr-4": {"App\\": "./"}
+    "psr-4": {"App\\": "./App"}
   },
   "require": {
     "ext-dom": "*",
@@ -16,5 +16,8 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
     "phpunit/phpunit": "^8"
+  },
+  "scripts": {
+    "test": "phpunit tests"
   }
 }
