remove firebase package

--- a/.env.dev
+++ b/.env.dev
@@ -10,4 +10,9 @@ SCIENER_PASSWORD=""
 
 SUPPORT_EMAIL=""
 
+MYSQL_HOST=""
+MYSQL_DB=""
+MYSQL_USER=""
+MYSQL_PASS=""
+
 GOOGLE_APPLICATION_CREDENTIALS=""
