--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "ext-json": "*",
     "ext-imap": "*",
     "ext-mbstring": "*",
+    "ext-pdo": "*",
     "guzzlehttp/guzzle": "~6.0",
     "phpmailer/phpmailer": "^6.0",
     "vlucas/phpdotenv": "^4.1"
