--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - ./temp/dev/mysql/data:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: host1253209_smartlock
-      MYSQL_USER: host1253209
-      MYSQL_PASSWORD: hostlandshino
+      MYSQL_DATABASE: smartlock
+      MYSQL_USER: smartlock
+      MYSQL_PASSWORD: smartlock
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     ports:
       - 3306:3306
@@ -19,14 +19,3 @@ services:
     volumes:
       - ./:/opt/app
       - ./temp/dev/php/logs:/var/log/php
-    environment:
-      XDEBUG_CONFIG: remote_host=172.16.239.1
-    extra_hosts:
-      - virtlabs.local:172.16.239.1
-networks:
-  default:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.16.239.0/24
