--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,11 @@
     "psr-4": {"App\\": "./App"}
   },
   "require": {
-    "ext-dom": "*",
-    "ext-json": "*",
-    "ext-imap": "*",
-    "ext-mbstring": "*",
     "ext-pdo": "*",
     "guzzlehttp/guzzle": "~6.0",
     "phpmailer/phpmailer": "^6.0",
-    "vlucas/phpdotenv": "^4.1"
+    "vlucas/phpdotenv": "^4.1",
+    "symfony/http-foundation": "^5.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
