--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "guzzlehttp/guzzle": "~6.0",
     "phpmailer/phpmailer": "^6.0",
     "vlucas/phpdotenv": "^4.1",
-    "symfony/http-foundation": "^5.4"
+    "symfony/http-foundation": "^5.4",
+    "symfony/dependency-injection": "^5.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
