--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
   "autoload": {
-    "psr-4": {"App\\": "./App"}
+    "psr-4": {
+      "App\\": "./App"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "tests\\App\\": "./tests"
+    }
   },
   "require": {
     "ext-pdo": "*",
