--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   },
   "require": {
+    "ext-json": "*",
     "ext-pdo": "*",
     "guzzlehttp/guzzle": "~6.0",
     "phpmailer/phpmailer": "^6.0",
