--- a/docker/nginx/hosts/app.conf
+++ b/docker/nginx/hosts/app.conf
@@ -9,6 +9,10 @@ server {
     root /var/www/;
     index index.php;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
         # Redirect everything that isn't a real file to index.php
         try_files $uri $uri/ /index.php$is_args$args;
