--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:5.6
     volumes:
-      - ./temp/dev/mysql/data:/var/lib/mysql
+      - ./temp/dev/mysql/data/:/var/lib/mysql/:rw
     environment:
       MYSQL_DATABASE: smartlock
       MYSQL_USER: smartlock
@@ -17,8 +17,8 @@ services:
       context: .
       dockerfile: docker/php/Dockerfile
     volumes:
-      - ./:/var/www
-      - ./temp/dev/php/logs:/var/log/php
+      - ./:/var/www/:rw
+      - ./docker/php/conf.d:/usr/local/etc/php/conf.d/:ro
     environment:
       PHP_IDE_CONFIG: "serverName=xdebug-docker"
       XDEBUG_CONFIG: "client_host=172.22.0.1"
@@ -32,14 +32,14 @@ services:
       - 443:443
     volumes:
       - ./:/var/www
-      - ./docker/nginx/hosts:/etc/nginx/conf.d
-      - ./temp/dev/nginx/logs:/var/log/nginx
-      - ./temp/dev/certbot/www:/var/www/certbot/:ro
+      - ./docker/nginx/hosts:/etc/nginx/conf.d/:ro
+      - ./temp/dev/nginx/logs:/var/log/nginx/:rw
     links:
       - php
 
   certbot:
     image: certbot/certbot:latest
     volumes:
-      - ./temp/dev/certbot/www:/var/www/certbot/:rw
-      - ./temp/dev/certbot/conf/:/etc/letsencrypt/:rw
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - /temp/dev/certbot/logs:/var/log/letsencrypt
