--- a/docker/nginx/hosts/app.conf
+++ b/docker/nginx/hosts/app.conf
@@ -6,7 +6,7 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    root /var/www/;
+    root /var/www/public;
     index index.php;
 
     location /.well-known/acme-challenge/ {
@@ -23,9 +23,5 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_pass php:9000;
         try_files $uri =404;
-    }
-
-    location ~* /\. {
-        deny all;
     }
 }
