--- a/docker/nginx/hosts/app.conf
+++ b/docker/nginx/hosts/app.conf
@@ -10,7 +10,7 @@ server {
     index index.php;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/certbot/www;
     }
 
     location / {
