add property support

--- a/.env.dev
+++ b/.env.dev
@@ -12,6 +12,11 @@ BEDS24_APIKEY=
 BEDS24_PROPKEY=
 BEDS24_DIGEST_TOKEN=
 
+BEDS24_PROP_APARTMENTS=
+BEDS24_PROP_GUESTHOUSE=
+BEDS24_PROP_HOSTEL=
+BEDS24_PROP_TEST=
+
 SUPPORT_EMAIL=""
 
 MYSQL_HOST=""
@@ -20,3 +25,4 @@ MYSQL_USER=""
 MYSQL_PASS=""
 
 GOOGLE_APPLICATION_CREDENTIALS=""
+
