--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,7 @@
          cacheResultFile="./temp/.phpunit.result.cache">
   <coverage>
     <include>
-      <directory suffix=".php">src/</directory>
+      <directory suffix=".php">App/</directory>
     </include>
     <report>
       <clover outputFile="build/clover.xml"/>
