--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,11 +13,18 @@ parameters:
   mysql.pass: '%env(MYSQL_PASS)%'
   mysql.charset: 'utf8mb4'
 
+  sciener.app_id: '%env(SCIENER_APP_ID)%'
+  sciener.lock_id: '%env(SCIENER_LOCK_ID)%'
+  sciener.app_secret: '%env(SCIENER_APP_SECRET)%'
+  sciener.user: '%env(SCIENER_USER)%'
+  sciener.password: '%env(SCIENER_PASSWORD)%'
+
 services:
   _defaults:
     autowire: true
     autoconfigure: true
     public: true
+  App\Commands\RemoveExpiredPasscodes: ~    
   App\Controller\ApiController:
     class: App\Controller\ApiController
     arguments:
@@ -28,6 +35,14 @@ services:
     arguments:
       - '@GuzzleHttp\ClientInterface'
       - '%beds24.apikey%'
+  App\Providers\Sciener\Client\Client:
+    arguments:
+      - '@GuzzleHttp\ClientInterface'
+      - '%sciener.app_id%'
+      - '%sciener.lock_id%'
+      - '%sciener.app_secret%'
+      - '%sciener.user%'
+      - '%sciener.password%'
   App\Repository\TokenMysqlRepository:
     arguments:
       - '@PDO'
@@ -36,7 +51,6 @@ services:
       - '@App\Providers\Beds24\Client\ClientV1'
       - '%beds24.props%'
   App\Services\LockService: ~
-  App\Services\ScienerApi: ~
   App\Repository\TokenRepositoryInterface: '@App\Repository\TokenMysqlRepository'
   GuzzleHttp\Client: ~
   GuzzleHttp\ClientInterface: '@GuzzleHttp\Client'
