--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "symfony/http-foundation": "^5.4",
     "symfony/dependency-injection": "^5.4",
     "symfony/yaml": "^5.4",
-    "symfony/config": "^5.4"
+    "symfony/config": "^5.4",
+    "php-amqplib/php-amqplib": "^2.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
