--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,16 @@ services:
       - ./:/var/www/:rw
       - ./docker/php/conf.d:/usr/local/etc/php/conf.d/:ro
 
+  worker:
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    command: ["php", "-f", "command.php", "queue:consume"]
+    restart: unless-stopped
+    volumes:
+      - ./:/var/www/:rw
+      - ./docker/php/conf.d:/usr/local/etc/php/conf.d/:ro
+
   nginx:
     image: nginx:alpine
     ports:
@@ -50,8 +60,8 @@ services:
 
   rabbitmq:
     image: rabbitmq:3.10-alpine
-    ports:
-      - "15673:15672"
+    volumes:
+      - ./temp/dev/rabbitmq/data:/var/lib/rabbitmq/:rw
 
   certbot:
     image: certbot/certbot:latest
