--- a/docker/nginx/hosts/app.conf
+++ b/docker/nginx/hosts/app.conf
@@ -3,14 +3,14 @@ server {
     client_max_body_size 128M;
     listen 80; ## listen for ipv4
     listen [::]:80;
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
+#    listen 443 default_server ssl http2;
+#    listen [::]:443 ssl http2;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    ssl_certificate /etc/nginx/ssl/live/smartlock.ovh/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/smartlock.ovh/privkey.pem;
+#    ssl_certificate /etc/nginx/ssl/live/smartlock.ovh/fullchain.pem;
+#    ssl_certificate_key /etc/nginx/ssl/live/smartlock.ovh/privkey.pem;
 
     root /var/www/public;
     index index.php;
