--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       MYSQL_USER: smartlock
       MYSQL_PASSWORD: smartlock
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    command: --max_allowed_packet=32505856
     ports:
       - "127.0.0.1:3306:3306"
 
