--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,7 @@ services:
     autowire: true
     autoconfigure: true
     public: true
+  App\Commands\AddBooking: ~
   App\Commands\RemoveDuplicates: ~
   App\Commands\RemoveExpiredPasscodes: ~
   App\Commands\ConsumeQueue: ~
