add telegram notifications

--- a/.env.dev
+++ b/.env.dev
@@ -1,12 +1,12 @@
-MAIL_USER=""
-MAIL_PASSWORD=""
-MAIL_NAME=""
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_NAME=
 
-SCIENER_APP_ID=""
-SCIENER_APP_SECRET=""
-SCIENER_LOCK_ID=""
-SCIENER_USER=""
-SCIENER_PASSWORD=""
+SCIENER_APP_ID=
+SCIENER_APP_SECRET=
+SCIENER_LOCK_ID=
+SCIENER_USER=
+SCIENER_PASSWORD=
 
 BEDS24_APIKEY=
 BEDS24_PROPKEY=
@@ -17,14 +17,14 @@ BEDS24_PROP_GUESTHOUSE=
 BEDS24_PROP_HOSTEL=
 BEDS24_PROP_TEST=
 
-SUPPORT_EMAIL=""
+SUPPORT_EMAIL=
 
-MYSQL_HOST=""
-MYSQL_DB=""
-MYSQL_USER=""
-MYSQL_PASS=""
+MYSQL_HOST=
+MYSQL_DB=
+MYSQL_USER=
+MYSQL_PASS=
 
-GOOGLE_APPLICATION_CREDENTIALS=""
+GOOGLE_APPLICATION_CREDENTIALS=
 
 RABBITMQ_HOST=
 RABBITMQ_PORT=
@@ -32,3 +32,6 @@ RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 
 QUEUE_NAME=default
+
+TELEGRAM_BOT_API_KEY=
+TELEGRAM_BOT_USERNAME=
