--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "symfony/dependency-injection": "^5.4",
     "symfony/yaml": "^5.4",
     "symfony/config": "^5.4",
-    "php-amqplib/php-amqplib": "^3.2"
+    "php-amqplib/php-amqplib": "^3.2",
+    "longman/telegram-bot": "^0.78.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "*",
