update xdebug config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - ./:/var/www/:rw
     environment:
       PHP_IDE_CONFIG: "serverName=xdebug-docker"
-      XDEBUG_CONFIG: "client_host=host.docker.internal"
+      XDEBUG_CONFIG: "client_host=host.docker.internal xdebug.start_with_request=yes"
       XDEBUG_MODE: "debug"
       XDEBUG_SESSION: "PHPSTORM"
     extra_hosts:
