--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       dockerfile: docker/php/Dockerfile
     volumes:
       - ./:/var/www/:rw
+    restart: unless-stopped
     environment:
       PHP_IDE_CONFIG: "serverName=xdebug-docker"
       XDEBUG_CONFIG: "client_host=host.docker.internal xdebug.start_with_request=yes"
