--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ version: '3'
 # PDO ATTR_PERSISTENT + wait_timeout
 services:
   mysql:
-    image: mysql:8
+    image: mysql:8.0
     volumes:
-      - ./temp/dev/mysql/data/:/var/lib/mysql/:rw
+      - db-data:/var/lib/mysql/:rw
     environment:
       MYSQL_DATABASE: smartlock
       MYSQL_USER: smartlock
       MYSQL_PASSWORD: smartlock
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    command: --max_allowed_packet=32505856
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "127.0.0.1:3306:3306"
 
@@ -28,7 +28,7 @@ services:
       XDEBUG_MODE: "debug"
       XDEBUG_SESSION: "PHPSTORM"
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "host.docker.internal:172.30.208.1"
     ports:
       - "127.0.0.1:9000:9000"
 
@@ -59,7 +59,6 @@ services:
     volumes:
       - ./:/var/www
       - ./docker/nginx/hosts:/etc/nginx/conf.d/:ro
-      - ./temp/dev/nginx/logs:/var/log/nginx/:rw
       - ./certbot/conf/:/etc/nginx/ssl/:ro
     links:
       - php
@@ -73,4 +72,8 @@ services:
     ports:
       - "127.0.0.1:15672:15672"
     volumes:
-      - ./temp/dev/rabbitmq/data:/var/lib/rabbitmq/mnesia/:rw
+      - rabbitmq-data:/var/lib/rabbitmq/mnesia/:rw
+
+volumes:
+  db-data:
+  rabbitmq-data:
