--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_USER: smartlock
       MYSQL_PASSWORD: smartlock
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=mysql_native_password --max_allowed_packet=32M --wait_timeout=31536000 --interactive_timeout=31536000
     ports:
       - "127.0.0.1:3306:3306"
 
@@ -24,7 +24,7 @@ services:
     restart: unless-stopped
     environment:
       PHP_IDE_CONFIG: "serverName=xdebug-docker"
-      XDEBUG_CONFIG: "client_host=host.docker.internal xdebug.start_with_request=yes"
+      XDEBUG_CONFIG: "client_host=host.docker.internal start_with_request=trigger log_level=0"
       XDEBUG_MODE: "debug"
       XDEBUG_SESSION: "PHPSTORM"
     extra_hosts:
